jerry-core/parser/js/new-parser/tests/js/object-literal-get.js.expected

--- Script parsing start ---


--- Function parsing start ---

  [  1] CBC_CREATE_OBJECT

--- Function parsing start ---


Final byte code dump:

  Maximum stack depth: 0
  Flags: [small_lit_enc,no_lexical_env]
  Argument range end: 0
  Register range end: 0
  Identifier range end: 0
  Const literal range end: 0
  Literal range end: 0

   0 : CBC_RETURN_WITH_BLOCK

Byte code size: 1 bytes

--- Function parsing end ---

  [  1] CBC_EXT_SET_GETTER idx:0->number(10) idx:1->function
  [  0] CBC_POP
  [  0] CBC_JUMP_FORWARD
  [  0] CBC_JUMP_FORWARD
  [  0] CBC_JUMP_BACKWARD

Final byte code dump:

  Maximum stack depth: 1
  Flags: [small_lit_enc,no_lexical_env]
  Argument range end: 0
  Register range end: 0
  Identifier range end: 0
  Const literal range end: 1
  Literal range end: 2

   0 : CBC_CREATE_OBJECT
   1 : CBC_EXT_SET_GETTER idx:0(lit)->number(10) idx:1(lit)->function
   5 : CBC_POP
   6 : CBC_JUMP_FORWARD offset:4(->10)
   8 : CBC_JUMP_FORWARD offset:4(->12)
  10 : CBC_JUMP_BACKWARD offset:2(->8)
  12 : CBC_RETURN_WITH_BLOCK

Byte code size: 13 bytes

--- Function parsing end ---

  [  1] CBC_CREATE_OBJECT

--- Function parsing start ---


--- Script parsing end ---

Parse error 'Property getters must have no arguments.' at line: 7 col: 24
